fix(select): fixing display on Safari browser by adding 100% width to inner div

--- a/packages/components/select/src/components/osds-select/osds-select.scss
+++ b/packages/components/select/src/components/osds-select/osds-select.scss
@@ -26,6 +26,7 @@
     display: flex;
     align-items: center;
     border-style: solid;
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
